// ------------------------------------------------------------
// Copyright (c) Microsoft Corporation.
// Licensed under the MIT License.
// ------------------------------------------------------------

syntax = "proto3";

package pkg.proto.common.v1;

import "google/protobuf/any.proto";

option csharp_namespace = "Dapr.Client.Autogen.Grpc.v1";
option java_outer_classname = "DaprProtos";
option java_package = "io.dapr.v1";
option go_package = "github.com/dapr/dapr/pkg/proto/common/v1";

// HTTPExtension includes HTTP verb and querystring
// when Dapr runtime delivers HTTP content.
// 
// For example, when callers calls http invoke api
// POST http://localhost:3500/v1.0/invoke/<app_id>/method/<method>?query1=value1&query2=value2
// 
// Dapr runtime will parse POST as a verb and extract querystring to quersytring map.
message HTTPExtension {
  // Type of HTTP 1.1 Methods
  // RFC 7231: https://tools.ietf.org/html/rfc7231#page-24
  enum Verb {
    NONE = 0;
    GET = 1;
    HEAD = 2;
    POST = 3;
    PUT = 4;
    DELETE = 5;
    CONNECT = 6;
    OPTIONS = 7;
    TRACE = 8;
  }

  // verb is HTTP verb.
  //
  // This is required.
  Verb verb = 1;

  // querystring includes HTTP querystring.
  map<string, string> querystring = 2;
}

message InvokeRequest {
  // method is a method name which will be invoked by caller.
  // 
  // This field is required.
  string method = 1;

  // data conveys the content body which caller sent.
  // the type of data is bytes or protobuf message.
  // `content_type` is required if data is bytes type.
  //
  // This field is required.
  google.protobuf.Any data = 2;

  // content_type is the type of data content. When data includes bytes type data,
  // content_type is required.
  //
  // This field is optional.
  string content_type = 3;

  // protocol_extension includes protocol specific fields. 
  // for example, if users set HTTP Verb and HTTP querystring to transfer
  // HTTP compatible request, they will pack `HTTPExtension`
  // message to protocol_extension.
  //
  // This field is optional.
  oneof protocol_extension {
    HTTPExtension http = 4;
  }
}

message InvokeResponse {
  // data conveys the content body of InvokeService response.
  // the type of data is bytes or protobuf message.
  // `content_type` is required if data is bytes type.
  //
  // This field is required.
  google.protobuf.Any data = 1;

  // content_type is the type of data content. When data includes bytes type data,
  // content_type is required.
  //
  // This field is optional.
  string content_type = 2;
}

